Added warning of upcoming end of lifetime.

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -13,6 +13,8 @@
     = foodcoop_css_tag
 
   %body
+    .alert
+      Achtung, der Betrieb der Foodsoft wird bis Ende Juli 2017 eingestellt. <a href="https://www.foodcoops.net">Mehr Infos</a>
     = yield
 
     /
